class AppStrings {
  // General
  static const String appName = 'Cat App';

  // Onboarding
  static const String onboardingTitle = 'Find Your Best Companion With Us';
  static const String onboardingDescription =
      'Join & discover the best suitable pets as per your preferences in your location';
  static const String getStartedButton = 'Get Started';

  // Home
  static const String homeHeaderTitle = 'Find Your Forever Pet';
  static const String categoryListTitle = 'Category';
  static const String searchHint = 'Search';
}
